# snailtrail

./: .gitignore  Cargo.toml  README.md
backup_pag-construction/src/: dataflow.rs  lib.rs  output.rs
backup_snailtrail/src/exploration/: betweenness_centrality.rs
dashboard/: charts.js  index.html
dashboard/react/: charts.js
docs/: documented_log.clj
docs/graphs/: log_all.html  mwe.html  triangles.html
logformat/: Cargo.toml
logformat/rust/src/: lib.rs
logformat/src/: lib.rs
pag-construction/: run_all_timely.sh
pag-construction/examples/: end_to_end.rs
pag-construction/src/: dataflow.rs  input.rs  lib.rs  output.rs
pag_bench/: commands.sh  experiments.md  experiments.txt  ins_offline.sh  ins_online.sh
pag_bench/b1/: cluster.sh  prep.sh
pag_bench/b1 - offline PAG/: cluster.sh  log.txt  prep.sh
pag_bench/b1 - offline PAG/gnuplots/: st_edge_throughput.gp  st_latency.gp  st_latency_cdf.gp  st_latency_vs_throughput.gp  st_log_throughput.gp  st_log_throughput_cdf.gp  st_scaling.gp  st_tuple_throughput.gp  tc_log_throughput.gp  tc_tuple_throughput.gp  tuples_vs_events_vs_edges.gp
pag_bench/b1 - offline PAG/raw/: st_16_5.csv  st_16_50.csv  st_1_200.csv  st_1_50.csv  st_1_50000.csv  st_2_200.csv  st_2_50.csv  st_2_500.csv  st_2_50000.csv  st_32_5.csv  st_4_5.csv  st_4_50.csv  st_4_500.csv  st_4_50000.csv  st_8_200.csv  st_8_50000.csv  tc_32_200.csv  tc_32_50.csv  tc_32_50000.csv  tuples_32_200_22.csv  tuples_32_200_24.csv  tuples_32_200_7.csv  tuples_32_50000_10.csv  tuples_32_50000_19.csv  tuples_32_50000_26.csv  tuples_32_50000_8.csv  tuples_32_5000_1.csv  tuples_32_5000_11.csv  tuples_32_5000_16.csv  tuples_32_5000_17.csv  tuples_32_5000_24.csv  tuples_32_5000_6.csv  tuples_32_5000_9.csv  tuples_32_500_7.csv  tuples_32_50_0.csv  tuples_32_50_14.csv  tuples_32_50_16.csv  tuples_32_50_23.csv  tuples_32_50_24.csv  tuples_32_50_25.csv  (+6 more)
pag_bench/b1 - offline PAG/scripts/: spread.awk
pag_bench/b1/gnuplots/: st_edge_throughput.gp  st_latency.gp  st_latency_cdf.gp  st_latency_vs_edge_throughput.todo  st_latency_vs_throughput.gp  st_log_throughput.gp  st_log_throughput_cdf.gp  st_scaling.gp  st_tuple_throughput.gp  tc_latency.gp  tc_log_throughput.gp  tuples_vs_events_vs_edges.gp
pag_bench/b1/raw/: st_16_200.csv  st_1_5.csv  st_1_500.csv  st_1_5000.csv  st_1_50000.csv  st_2_5.csv  st_2_5000.csv  st_2_50000.csv  st_32_50.csv  st_4_200.csv  st_4_5000.csv  st_4_50000.csv  st_8_5.csv  st_8_50.csv  st_8_500.csv  st_8_5000.csv  st_8_50000.csv  tc_32_5.csv  tc_32_500.csv  tc_32_5000.csv  tc_32_50000.csv  tuples_32_200_11.csv  tuples_32_200_14.csv  tuples_32_200_25.csv  tuples_32_200_26.csv  tuples_32_200_28.csv  tuples_32_200_4.csv  tuples_32_200_6.csv  tuples_32_50000_14.csv  tuples_32_50000_15.csv  tuples_32_50000_22.csv  tuples_32_50000_5.csv  tuples_32_5000_0.csv  tuples_32_5000_20.csv  tuples_32_5000_21.csv  tuples_32_5000_3.csv  tuples_32_5000_30.csv  tuples_32_500_29.csv  tuples_32_500_4.csv  tuples_32_50_12.csv  (+6 more)
pag_bench/b2 - ST1 comparison/: prep.sh
pag_bench/b2 - ST1 comparison/gnuplots/: st_latency_cdf.gp  st_tuple_throughput.gp  tc_latency.gp  tc_log_throughput.gp  tc_tuple_throughput.gp  tuples_vs_events_vs_edges.gp
pag_bench/b2 - ST1 comparison/raw/: st_16_5.csv  st_16_50.csv  st_1_200.csv  st_2_200.csv  st_2_5.csv  st_2_50.csv  st_4_5.csv  st_4_50.csv  st_8_200.csv  tc_32_200.csv  tc_32_5.csv  tc_32_50.csv  tuples_32_200_12.csv  tuples_32_200_19.csv  tuples_32_200_20.csv  tuples_32_200_29.csv  tuples_32_200_3.csv  tuples_32_50_10.csv  tuples_32_50_19.csv  tuples_32_50_2.csv  tuples_32_50_22.csv  tuples_32_50_26.csv  tuples_32_50_29.csv  tuples_32_5_15.csv  tuples_32_5_2.csv  tuples_32_5_23.csv  tuples_32_5_25.csv  tuples_32_5_31.csv
pag_bench/b2/gnuplots/: st_edge_throughput.gp  st_latency.gp  st_latency_vs_throughput.gp  st_log_throughput.gp  st_log_throughput_cdf.gp
pag_bench/b2/raw/: st_16_200.csv  st_1_5.csv  st_1_50.csv  st_32_5.csv  st_32_50.csv  st_4_200.csv  st_8_5.csv  st_8_50.csv  tuples_32_200_10.csv  tuples_32_200_2.csv  tuples_32_200_21.csv  tuples_32_200_23.csv  tuples_32_200_30.csv  tuples_32_200_5.csv  tuples_32_200_8.csv  (+11 more)
pag_bench/b3/: log.txt  prep.sh
pag_bench/b3 - offline diff PAG/: prep.sh
pag_bench/b4/: ins_offline.sh  ins_online.sh  tri_online.sh
pag_bench/b4 - online PAG/: tri_offline.sh
pag_bench/b5 - offline commands/: prep.sh  test.txt  test1.txt  test2.txt
pag_bench/bench/: all.sh  bench.sh  bench_st.sh
pag_bench/tc/: tc.sh
pag_bench/tri32/: plotgen.sh
pipe/: Cargo.toml
pipe/src/: main.rs
st2/: Cargo.toml
st2-logformat/: Cargo.toml
st2-logformat/src/: lib.rs
st2-timely/: .gitignore  Cargo.toml
st2-timely/examples/: endless.rs  log_all.rs  manual_log.rs  minimal.rs  pr.rs  transitive_manages.rs  triangles.rs
st2-timely/src/: connect.rs  lib.rs  replay_throttled.rs
st2/examples/: consolidate.rs  evolving_path_length.rs  join_vs_map.rs
st2/src/: lib.rs  main.rs  pag.rs
st2/src/commands/: algo.rs  dashboard.rs  inspect.rs  invariants.rs  metrics.rs  mod.rs  viz.rs
st2/src/html/: charts.js  dashboard.js  index.html  package.json  pag.js  viz.js
st2/src/html/react/: charts.js  dashboard.js
timely-adapter/: Cargo.toml  tri_offline.sh  tri_online.sh
timely-adapter/examples/: basic_dataflow.rs  custom_operator.rs  diff_graph.rs  experiment.rs  log_all.rs  minimal.rs  nested_dataflow.rs  pr.rs  profiled_dataflow.rs  tcp_logger.rs  triangles.rs
timely-adapter/src/: connect.rs  lib.rs  main.rs  replay_throttled.rs  viz.rs
timely-pag/: Cargo.toml
timely-pag/examples/: end_to_end.rs
timely-pag/src/: dataflow.rs  lib.rs
timely-snailtrail/: Cargo.toml
timely-snailtrail/benchmarks/: bench.sh  plot_all.sh  plot_latencies.plt  plot_latencies.sh  plot_size.plt  plot_size.sh
timely-snailtrail/examples/: consolidate.rs  evolving_path_length.rs  inspect.rs  join_vs_map.rs  metrics.rs  throttle.rs  viz.rs
timely-snailtrail/html/: index.html
timely-snailtrail/src/: lib.rs  main.rs  pag.rs
timely-snailtrail/src/algo/: mod.rs
timely-snailtrail/src/commands/: mod.rs  viz.rs
(+122 files in other folders)
