[package]
name = "logformat"
version = "0.2.0"
edition = "2018"
description = "definitions for data types used to serialize raw traces"

[dependencies]
rmp = "^0.8"
enum-primitive-derive = "^0.1"
num-traits = "^0.2"
abomonation = "0.7"
abomonation_derive = "0.3"
json = "0.11.12"
clap = "^2.32"
timely = "0.10.0"
differential-dataflow = "0.10.0"

