[package]
name = "pipe"
version = "0.1.0"
authors = ["Malte Sandstede <samalt@ethz.ch>"]
edition = "2018"

[dependencies]
log = "^0.4.0"
timely = "0.10.0"
timely-adapter = { version = "0.2.0", path = "../timely-adapter" }
logformat = { version = "0.2.0", path = "../logformat" }

[dev-dependencies]
env_logger = "^0.6.1"