[package]
name = "st2-logformat"
version = "0.1.0"
description = "Adapter-agnostic definitions for data types used by ST2"
homepage = "https://github.com/li1/SnailTrail"
repository = "https://github.com/li1/snailtrail.git"

edition = "2018"

[dependencies]
rmp = "^0.8"
enum-primitive-derive = "^0.1"
num-traits = "^0.2"
abomonation = "0.7"
abomonation_derive = "0.3"
json = "0.11.12"
clap = "^2.32"
timely = "0.10.0"
differential-dataflow = "0.10.0"
