[package]
name = "st2-logformat"
version = "0.1.0"
description = "Adapter-agnostic definitions for data types used by ST2"
homepage = "https://github.com/li1/SnailTrail"
repository = "https://github.com/li1/snailtrail.git"
license = "MIT, apache"
authors = ["Malte Sandstede <malte@sandstede.com>", "ST2-repository/AUTHORS"]

edition = "2018"

[dependencies]
timely = "0.10.0"
differential-dataflow = "0.10.0"
abomonation = "0.7"
abomonation_derive = "0.3"
