[package]
name = "st2-timely"
version = "0.1.0"
authors = ["Malte Sandstede <malte@sandstede.com>"]
homepage = "https://github.com/li1/SnailTrail"
repository = "https://github.com/li1/snailtrail.git"
description = "ST2 Adapter for Timely & Differential"
license = "MIT"

edition = "2018"

[dependencies]
timely = "0.10.0"
differential-dataflow = "0.10.0"
st2-logformat = { version = "0.1.0", path = "../st2-logformat" }
log = "^0.4.0"
abomonation = "0.7"
abomonation_derive = "0.3"

[dev-dependencies]
env_logger = "^0.6.1"
rand = "0.4"
graph_map = { git = "https://github.com/frankmcsherry/graph-map.git"}
dogsdogsdogs = { path = "../../differential-dataflow/dogsdogsdogs" }
