[package]
name = "st2"
version = "0.1.0"
authors = ["Malte Sandstede <malte@sandstede.com>"]
homepage = "https://github.com/li1/SnailTrail"
repository = "https://github.com/li1/snailtrail.git"
description = "SnailTrail for Timely & Differential"
license = "MIT"

edition = "2018"

[dependencies]
timely = "0.10.0"
differential-dataflow = "0.10.0"
st2-logformat = { version = "0.1.0", path = "../st2-logformat" }
st2-timely = { version = "0.1.0", path = "../st2-timely/" }
tdiag-connect = "0.2.0"
abomonation = "0.7"
abomonation_derive = "0.3"
log = "^0.4.0"
clap = "2.33.0"
env_logger = "^0.6.1"