[package]
name = "timely-adapter"
version = "0.2.0"
authors = ["Malte Sandstede <samalt@ethz.ch"]
edition = "2018"

[dependencies]
timely = { git = "https://github.com/timelydataflow/timely-dataflow.git" }
# differential-dataflow = "^0.9"
differential-dataflow = { git = "https://github.com/timelydataflow/differential-dataflow.git" }
logformat = { version = "0.2.0", path = "../logformat" }
log = "^0.4.0"

[dev-dependencies]
env_logger = "^0.6.1"
graph_map = { git = "https://github.com/frankmcsherry/graph-map.git"}
dogsdogsdogs = { path = "../../differential-dataflow/dogsdogsdogs" }